@@ -1,5 +1,11 @@
 2013-07-28 Paulo Andrade <pcpa@gnu.org>
 
+	* check/lightning.c: Do not assume casting a double NaN or
+	Inf to float will produce the expected float NaN or Inf.
+	This is not true at least under s390x.
+
+2013-07-28 Paulo Andrade <pcpa@gnu.org>
+
 	* check/check.arm.sh, check/check.sh, check/check.swf.sh,
 	check/check.x87.sh: Properly check test programs output,
 	not just rely on the test program self testing the results
